--- a/ToolshopApp2/View/UserControlers/TaskWindowControllers/ShipmentTaskUserControl.xaml
+++ b/ToolshopApp2/View/UserControlers/TaskWindowControllers/ShipmentTaskUserControl.xaml
@@ -37,7 +37,7 @@
         <TextBlock Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="3" Margin="5">
             Email Address:
         </TextBlock>
-        <ComboBox  x:Name="_ComboBoxContactPerson" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="2" Margin="5" SelectionChanged="_ComboBoxContactPerson_SelectionChanged"/>
+        <ComboBox  x:Name="_ComboBoxContactPerson" IsEditable="True" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="2" Margin="5" SelectionChanged="_ComboBoxContactPerson_SelectionChanged"/>
         <TextBox x:Name="_TextBoxEmail" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="4" Margin="5" MaxLines="1" MaxLength="200"/>
         <TextBlock Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="5" Margin="5">
             Address:
